--- a/config-repo/eureka-service.yml
+++ b/config-repo/eureka-service.yml
@@ -5,13 +5,14 @@ eureka:
    enable-self-preservation: false
    eviction-interval-timer-in-ms: 4000
   client:
-   register-with-eureka: false
-   fetch-registry: false
-   service-url:
-      defaultZone: http://localhost:8761/eureka-service/
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
    healthcheck:
       enabled: true
   instance: 
+   hostname: localhost
    preferIpAddress: true
    leaseRenewalIntervalInSeconds: 10
    leaseExpirationDurationInSeconds: 15
