--- a/config-repo/zuul-service.yml
+++ b/config-repo/zuul-service.yml
@@ -8,7 +8,7 @@ eureka:
     hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 zuul:
 #  ignored-services: microservice-provider-user                         需要忽视的服务(配置后将不会被路由)
   routes:
