--- a/config-repo/eureka-service.yml
+++ b/config-repo/eureka-service.yml
@@ -1,8 +1,11 @@
+spring:
+  application:
+    name: eureka
 server:
    port: 8761
 eureka:
   server:
-   enable-self-preservation: false
+   enable-self-preservation: true
    eviction-interval-timer-in-ms: 4000
   client:
     registerWithEureka: false
