--- a/config-repo/eureka-service.yml
+++ b/config-repo/eureka-service.yml
@@ -5,7 +5,7 @@ server:
    port: 8761
 eureka:
   server:
-   enable-self-preservation: true
+   enable-self-preservation: false
    eviction-interval-timer-in-ms: 4000
   client:
     registerWithEureka: false
