--- a/config-repo/eureka-service.yml
+++ b/config-repo/eureka-service.yml
@@ -2,20 +2,13 @@ spring:
   application:
     name: eureka
 server:
-   port: 8761
+   port: 8761          # 指定该Eureka实例的端口
 eureka:
-  server:
-   enable-self-preservation: false
-   eviction-interval-timer-in-ms: 4000
-  client:
+  client: 
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   instance: 
-   hostname: localhost
-   preferIpAddress: true
-   leaseRenewalIntervalInSeconds: 10
-   leaseExpirationDurationInSeconds: 15
-   lease-expiration-duration-in-seconds: 30
-   lease-renewal-interval-in-seconds: 10
+   hostname: localhost         # 指定该Eureka实例的主机名
+ 
