--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,7 @@ target/
 .project
 .settings
 .springBeans
-<<<<<<< HEAD
-=======
-.metadata
->>>>>>> bafc94a44fa2f33202885904fdf69946fc09cbdb
+.metadata/
 
 ### IntelliJ IDEA ###
 .idea
