--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 RemoteSystemsTempFiles/
 target/
+.metadata/*
+.metadata/
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -9,7 +11,7 @@ target/
 .project
 .settings
 .springBeans
-.metadata/
+
 
 ### IntelliJ IDEA ###
 .idea
