--- a/config-repo/user-service.yml
+++ b/config-repo/user-service.yml
@@ -1,6 +1,16 @@
 spring:
+#  jpa:                     不用jpa
+#    properties:
+#      hibernate: 
+#        hbm2ddl: 
+#          auto: update
   application:
     name: user
+  datasource: 
+    url: jdbc:mysql://localhost:3306/test
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
 server:
   port: 8081
 eureka:
@@ -9,3 +19,4 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://127.0.0.1:8761/eureka/
+ 
