--- a/config-repo/eureka-service.yml
+++ b/config-repo/eureka-service.yml
@@ -4,11 +4,11 @@ spring:
 server:
    port: 8761          # 指定该Eureka实例的端口
 eureka:
-  client: 
+  client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-  instance: 
+  instance:
    hostname: localhost         # 指定该Eureka实例的主机名
- 
+   prefer-ip-address: true
