--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -5,3 +5,17 @@ spring:
       name: eureka-service
       label: master
       profile: master
+# spring:
+#   application:
+#     name: eureka
+# server:
+#    port: 8761          # 指定该Eureka实例的端口
+# eureka:
+#   client:
+#     registerWithEureka: false
+#     fetchRegistry: false
+#     serviceUrl:
+#       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+#   instance:
+#    hostname: localhost         # 指定该Eureka实例的主机名
+#    prefer-ip-address: true
